Modified pagination for katas
